freest/test/prog/Invalid/Typing/MultipleData/MultipleData.fst
module MultipleData where

data T = C
data U = C
